--- a/month.html
+++ b/month.html
@@ -9,9 +9,6 @@
         <link rel="stylesheet" type="text/css" href="koyomi.css" />
         <link rel="stylesheet" type="text/css" href="month.css" />
         <script type="text/javascript" src="hammer.min.js"></script>
-        <script type="text/javascript" src="harima-koyomi/old_calendar.js"></script>
-        <script type="text/javascript" src="common.js"></script>
-        <script type="text/javascript" src="monthly.js"></script>
     </head>
     <body>
         <div id="koyomi">
@@ -40,5 +37,7 @@
         </div>
         
         <address>&copy; 2016 東京☆播磨陰陽道研究会<br />(窓際組)</address>
+
+        <script type="text/javascript" src="monthly.bundle.js"></script>
     </body>
 </html>
