--- a/month.html
+++ b/month.html
@@ -7,17 +7,13 @@
         <link rel="icon" type="image/png" href="/favicon.png">
         <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
         <link rel="stylesheet" type="text/css" href="koyomi.css" />
-        <link rel="stylesheet" type="text/css" href="month.css" />
-        <script type="text/javascript" src="hammer.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="index.css" />
+        <link rel="stylesheet" type="text/css" href="Button.css" />
+        <link rel="stylesheet" type="text/css" href="OldDateMonth.css" />
     </head>
     <body>
         <div id="koyomi">
-            <h1>
-                <a href="#" class="navi" id="prev">&laquo;</a>
-                <span class="current gotoCurrent" id="current"></span>
-                <a href="#" class="navi" id="next">&raquo;</a>
-            </h1>
-            <p class="old"><span class="gotoCurrent" id="jaYearMonth"></span></p>
+            <div id="old-date-month"></div>
             
             <div id="monthlyCalendar">
             </div>
