--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" type="text/css" href="index.css" />
         <link rel="stylesheet" type="text/css" href="Button.css" />
         <link rel="stylesheet" type="text/css" href="OldDateMonth.css" />
+        <link rel="stylesheet" type="text/css" href="Explanations.css" />
     </head>
     <body>
         <div id="toolbar">
