--- a/month.html
+++ b/month.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         
-        <address>&copy; 2016 東京☆播磨陰陽道研究会<br />(窓際組)</address>
+        <div id="copyright-box"></div>
 
         <script type="text/javascript" src="monthly.bundle.js"></script>
     </body>
