--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             <p id="tags"></p>
             
             <img class="footer" src="img/4×5.png" />
+            <div id="peatix">
+                <a href="http://tokyo-harima.peatix.com">
+                    <div>☆東京×播磨プロジェクト☆</div>
+                    <div>各講座のご案内はこちら。</div>
+                </a>
+            </div>
         </div>
         <div id="explanation">
             <!-- 解説 -->
